tests/semantica/valid/declaracion/test1.ctds
program 
    {
		    integer x = 0;
        
        void main(){
			
		    }
        
    }