tests/semantica/invalid/literal/test1.ctds
program
	{
		integer x = 2147483648;

		void main(){
			
		}
	}